# Proiect-retele

A2_Hritcu_Denis/: Universitatea Alexandru Ioan Cuza.docx
A2_Hritcu_Denis/PROIECT/: CLientPrincipal  CMakeLists.txt  CMakeSettings.json  ClientPrincipal.c  ClientPrincipal.h  ClientSecundar.c  ClientSecundar.h  ServerPrincipal  ServerPrincipal.c  bazadate.db  server.h
A2_Hritcu_Denis/PROIECT/build1/: CMakeCache.txt  ClientPrincipal  ClientSecundar  Makefile  cmake_install.cmake
